<resources>
    <string name="app_name">ItTestApplication</string>
    <string name="ok">Oк</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="auth">Авторизация</string>
    <string name="name">Имя</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="back">Назад</string>
    <string name="logout">LogOut</string>
    <string name="adminBtnText">Страница администратора</string>
    <string name="addQuestion">Добавить вопрос</string>
    <string name="question">Вопрос</string>
    <string name="idProf">ID Профессии</string>
    <string name="idQuestion">ID Вопроса</string>
    <string name="countPoints">Кол-во баллов</string>
    <string name="addAnswer">Добавить ответ</string>
    <string name="idAnswers">ID Вопросов</string>
    <string name="answer">Ответ</string>
</resources>