<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    tools:context=".activities.RegistrationActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:text="@string/registration"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

            </TextView>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:textColorHint="@color/black"
                android:textSize="20sp">

            </EditText>


            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login"
                android:textColorHint="@color/black"
                android:textSize="20sp">

            </EditText>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                >

            </EditText>

            <EditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/repeatPassword"
                android:textColorHint="@color/black"
                android:textSize="20sp">

            </EditText>

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/ok"
                android:textColor="@color/white"
                app:cornerRadius="10dp">

            </Button>

            <Button
                android:id="@+id/registrationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                app:cornerRadius="10dp"
                android:text="@string/back">

            </Button>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/logoImageView"
        android:src="@drawable/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>