<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/violet"
    android:layout_height="match_parent"
    tools:context=".activities.AdminActivity">



        <androidx.cardview.widget.CardView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp"


            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="18dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adminBtnText"
                    android:gravity="center"
                    android:textSize="22sp"
                    >

                </TextView>

                <EditText
                    android:id="@+id/questionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:inputType="text"
                    >

                </EditText>

                <EditText
                    android:id="@+id/professionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/idProf"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:inputType="text"
                    >

                </EditText>

                <Button
                    android:id="@+id/addQuestionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    app:cornerRadius="10dp"
                    android:textSize="20sp"
                    android:text="@string/addQuestion"
                    >

                </Button>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idProf"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    >

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewProfessions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                </androidx.recyclerview.widget.RecyclerView>

                <EditText
                    android:id="@+id/answerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:inputType="text"
                    >

                </EditText>


                <EditText
                    android:id="@+id/idQuestionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/idQuestion"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:inputType="text"
                    >

                </EditText>

                <EditText
                    android:id="@+id/countPointsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/countPoints"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:inputType="text"
                    >

                </EditText>

                <Button
                    android:id="@+id/addAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    app:cornerRadius="10dp"
                    android:textSize="20sp"
                    android:text="@string/addAnswer"
                    >

                </Button>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idAnswers"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    >

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/questionsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                </androidx.recyclerview.widget.RecyclerView>


                <Button
                    android:id="@+id/backButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    app:cornerRadius="10dp"
                    android:textSize="20sp"
                    android:text="@string/back"
                    >

                </Button>

            </LinearLayout>


    </ScrollView>
        </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>